# Content-Based-Image-Retrieval

./: .gitignore  CMakeLists.txt  README.md  filters.h  functions.cpp  functions.h  image_proc.cpp  main.cpp  rename_can_pics.py
features/: baseline.csv  can_DA_hist.csv  can_features.csv  can_hist.csv  face_detection.csv  histogram.csv  texture_color.csv  yellow_spatial_variance.csv
sources/: features.csv
